crates/spoke-connect/bindings/swift/generated/spoke_connectFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
typedef struct UniffiVTableCallbackInterfaceToolHandler {
    UniffiCallbackInterfaceFree _Nonnull uniffiFree;
    UniffiCallbackInterfaceClone _Nonnull uniffiClone;
    UniffiCallbackInterfaceToolHandlerMethod0 _Nonnull handle;
} UniffiVTableCallbackInterfaceToolHandler;
typedef struct UniffiVTableCallbackInterfaceTransport {
    UniffiCallbackInterfaceFree _Nonnull uniffiFree;
    UniffiCallbackInterfaceClone _Nonnull uniffiClone;
    UniffiCallbackInterfaceTransportMethod0 _Nonnull send;
    UniffiCallbackInterfaceTransportMethod1 _Nonnull recv;
    UniffiCallbackInterfaceTransportMethod2 _Nonnull close;
} UniffiVTableCallbackInterfaceTransport;
uint64_t uniffi_spoke_connect_fn_clone_inboundsequence(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_spoke_connect_fn_free_inboundsequence(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_spoke_connect_fn_clone_noncestore(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_spoke_connect_fn_free_noncestore(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_spoke_connect_fn_constructor_noncestore_new(RustCallStatus *_Nonnull out_status
    
);
int8_t uniffi_spoke_connect_fn_method_noncestore_check_and_record(uint64_t ptr, RustBuffer peer_id, RustBuffer nonce, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_spoke_connect_fn_clone_outboundsequence(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_spoke_connect_fn_free_outboundsequence(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_spoke_connect_fn_constructor_outboundsequence_new(RustCallStatus *_Nonnull out_status
    
);
uint64_t uniffi_spoke_connect_fn_method_outboundsequence_allocate(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_spoke_connect_fn_clone_connectresponderffi(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_spoke_connect_fn_free_connectresponderffi(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_spoke_connect_fn_clone_loopbacktransport(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_spoke_connect_fn_free_loopbacktransport(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_spoke_connect_fn_clone_loopbacktransportpair(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_spoke_connect_fn_free_loopbacktransportpair(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_spoke_connect_fn_clone_multipeerrouterffi(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_spoke_connect_fn_free_multipeerrouterffi(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_spoke_connect_fn_clone_remoteadapterffi(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_spoke_connect_fn_free_remoteadapterffi(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_spoke_connect_fn_method_remoteadapterffi_close(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_remoteadapterffi_get_host_capability_manifest(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_remoteadapterffi_get_knowledge_entry(uint64_t ptr, RustBuffer entry_id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_remoteadapterffi_get_relation(uint64_t ptr, RustBuffer relation_id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_remoteadapterffi_invoke_tool(uint64_t ptr, RustBuffer capability_id, RustBuffer arguments_json, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_remoteadapterffi_list_knowledge_entries(uint64_t ptr, RustBuffer scope_json, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_remoteadapterffi_list_peer_host_capability_manifests(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_remoteadapterffi_list_rules(uint64_t ptr, RustBuffer rule_refs, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_remoteadapterffi_list_timeline_events(uint64_t ptr, RustBuffer scope_json, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_remoteadapterffi_put_findings(uint64_t ptr, RustBuffer findings_json, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_remoteadapterffi_put_knowledge_entry(uint64_t ptr, RustBuffer entry_json, RustBuffer expected_base_revision, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_remoteadapterffi_put_relation(uint64_t ptr, RustBuffer relation_json, RustBuffer expected_base_revision, RustCallStatus *_Nonnull out_status
);
void uniffi_spoke_connect_fn_method_remoteadapterffi_register_tool_handler(uint64_t ptr, RustBuffer capability_id, uint64_t handler, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_remoteadapterffi_remote_manifest(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_remoteadapterffi_remote_peer_id(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_remoteadapterffi_session_id(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_method_remoteadapterffi_state(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_spoke_connect_fn_init_callback_vtable_toolhandler(const UniffiVTableCallbackInterfaceToolHandler* _Nonnull vtable
);
void uniffi_spoke_connect_fn_init_callback_vtable_transport(const UniffiVTableCallbackInterfaceTransport* _Nonnull vtable
);