crates/spoke-connect/bindings/python/spoke_connect/__init__.py

    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_noncestore_check_and_record.restype = ctypes.c_int8
_UniffiLib.uniffi_spoke_connect_fn_constructor_noncestore_new.argtypes = (
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_constructor_noncestore_new.restype = ctypes.c_uint64
_UniffiLib.uniffi_spoke_connect_fn_method_outboundsequence_allocate.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_outboundsequence_allocate.restype = ctypes.c_uint64
_UniffiLib.uniffi_spoke_connect_fn_constructor_outboundsequence_new.argtypes = (
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_constructor_outboundsequence_new.restype = ctypes.c_uint64
_UniffiLib.uniffi_spoke_connect_fn_method_remoteadapterffi_close.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_remoteadapterffi_close.restype = None
_UniffiLib.uniffi_spoke_connect_fn_method_remoteadapterffi_get_host_capability_manifest.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_remoteadapterffi_get_host_capability_manifest.restype = _UniffiRustBuffer
_UniffiLib.uniffi_spoke_connect_fn_method_remoteadapterffi_get_knowledge_entry.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_remoteadapterffi_get_knowledge_entry.restype = _UniffiRustBuffer
_UniffiLib.uniffi_spoke_connect_fn_method_remoteadapterffi_get_relation.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_remoteadapterffi_get_relation.restype = _UniffiRustBuffer
_UniffiLib.uniffi_spoke_connect_fn_method_remoteadapterffi_invoke_tool.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_remoteadapterffi_invoke_tool.restype = _UniffiRustBuffer
_UniffiLib.uniffi_spoke_connect_fn_method_remoteadapterffi_list_knowledge_entries.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_remoteadapterffi_list_knowledge_entries.restype = _UniffiRustBuffer
_UniffiLib.uniffi_spoke_connect_fn_method_remoteadapterffi_list_peer_host_capability_manifests.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_remoteadapterffi_list_peer_host_capability_manifests.restype = _UniffiRustBuffer
_UniffiLib.uniffi_spoke_connect_fn_method_remoteadapterffi_list_rules.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_remoteadapterffi_list_rules.restype = _UniffiRustBuffer
_UniffiLib.uniffi_spoke_connect_fn_method_remoteadapterffi_list_timeline_events.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_remoteadapterffi_list_timeline_events.restype = _UniffiRustBuffer
_UniffiLib.uniffi_spoke_connect_fn_method_remoteadapterffi_put_findings.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_remoteadapterffi_put_findings.restype = _UniffiRustBuffer
_UniffiLib.uniffi_spoke_connect_fn_method_remoteadapterffi_put_knowledge_entry.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_remoteadapterffi_put_knowledge_entry.restype = _UniffiRustBuffer
_UniffiLib.uniffi_spoke_connect_fn_method_remoteadapterffi_put_relation.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_remoteadapterffi_put_relation.restype = _UniffiRustBuffer
_UniffiLib.uniffi_spoke_connect_fn_method_remoteadapterffi_register_tool_handler.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_remoteadapterffi_register_tool_handler.restype = None
_UniffiLib.uniffi_spoke_connect_fn_method_remoteadapterffi_remote_manifest.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_remoteadapterffi_remote_manifest.restype = _UniffiRustBuffer
_UniffiLib.uniffi_spoke_connect_fn_method_remoteadapterffi_remote_peer_id.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_remoteadapterffi_remote_peer_id.restype = _UniffiRustBuffer
_UniffiLib.uniffi_spoke_connect_fn_method_remoteadapterffi_session_id.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_remoteadapterffi_session_id.restype = _UniffiRustBuffer
_UniffiLib.uniffi_spoke_connect_fn_method_remoteadapterffi_state.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_method_remoteadapterffi_state.restype = _UniffiRustBuffer
_UniffiLib.uniffi_spoke_connect_fn_clone_connectresponderffi.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_clone_connectresponderffi.restype = ctypes.c_uint64
_UniffiLib.uniffi_spoke_connect_fn_free_connectresponderffi.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_free_connectresponderffi.restype = None
_UniffiLib.uniffi_spoke_connect_fn_clone_inboundsequence.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_clone_inboundsequence.restype = ctypes.c_uint64
_UniffiLib.uniffi_spoke_connect_fn_free_inboundsequence.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_free_inboundsequence.restype = None
_UniffiLib.uniffi_spoke_connect_fn_clone_loopbacktransport.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_clone_loopbacktransport.restype = ctypes.c_uint64
_UniffiLib.uniffi_spoke_connect_fn_free_loopbacktransport.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_free_loopbacktransport.restype = None
_UniffiLib.uniffi_spoke_connect_fn_clone_loopbacktransportpair.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_clone_loopbacktransportpair.restype = ctypes.c_uint64
_UniffiLib.uniffi_spoke_connect_fn_free_loopbacktransportpair.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_free_loopbacktransportpair.restype = None
_UniffiLib.uniffi_spoke_connect_fn_clone_multipeerrouterffi.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_clone_multipeerrouterffi.restype = ctypes.c_uint64
_UniffiLib.uniffi_spoke_connect_fn_free_multipeerrouterffi.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_free_multipeerrouterffi.restype = None
_UniffiLib.uniffi_spoke_connect_fn_clone_noncestore.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_clone_noncestore.restype = ctypes.c_uint64
_UniffiLib.uniffi_spoke_connect_fn_free_noncestore.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_free_noncestore.restype = None
_UniffiLib.uniffi_spoke_connect_fn_clone_outboundsequence.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_clone_outboundsequence.restype = ctypes.c_uint64
_UniffiLib.uniffi_spoke_connect_fn_free_outboundsequence.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_free_outboundsequence.restype = None
_UniffiLib.uniffi_spoke_connect_fn_clone_remoteadapterffi.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_clone_remoteadapterffi.restype = ctypes.c_uint64
_UniffiLib.uniffi_spoke_connect_fn_free_remoteadapterffi.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_spoke_connect_fn_free_remoteadapterffi.restype = None
_UNIFFI_CALLBACK_INTERFACE_SPOKE_CONNECT_TOOL_HANDLER_METHOD0 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiRustBuffer,ctypes.POINTER(_UniffiRustBuffer),
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UNIFFI_CALLBACK_INTERFACE_CLONE_SPOKE_CONNECT_TOOL_HANDLER = ctypes.CFUNCTYPE(ctypes.c_uint64,ctypes.c_uint64,
)
_UNIFFI_CALLBACK_INTERFACE_FREE_SPOKE_CONNECT_TOOL_HANDLER = ctypes.CFUNCTYPE(None,ctypes.c_uint64,
)
class _UniffiVTableCallbackInterfaceSpokeConnectToolHandler(ctypes.Structure):
    _fields_ = [
        ("uniffi_free", _UNIFFI_CALLBACK_INTERFACE_FREE_SPOKE_CONNECT_TOOL_HANDLER),
        ("uniffi_clone", _UNIFFI_CALLBACK_INTERFACE_CLONE_SPOKE_CONNECT_TOOL_HANDLER),
        ("handle", _UNIFFI_CALLBACK_INTERFACE_SPOKE_CONNECT_TOOL_HANDLER_METHOD0),
    ]
_UniffiLib.uniffi_spoke_connect_fn_init_callback_vtable_toolhandler.argtypes = (
    ctypes.POINTER(_UniffiVTableCallbackInterfaceSpokeConnectToolHandler),
)
_UniffiLib.uniffi_spoke_connect_fn_init_callback_vtable_toolhandler.restype = None
_UNIFFI_CALLBACK_INTERFACE_SPOKE_CONNECT_TRANSPORT_METHOD0 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiRustBuffer,ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UNIFFI_CALLBACK_INTERFACE_SPOKE_CONNECT_TRANSPORT_METHOD1 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,ctypes.POINTER(_UniffiRustBuffer),
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UNIFFI_CALLBACK_INTERFACE_SPOKE_CONNECT_TRANSPORT_METHOD2 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UNIFFI_CALLBACK_INTERFACE_CLONE_SPOKE_CONNECT_TRANSPORT = ctypes.CFUNCTYPE(ctypes.c_uint64,ctypes.c_uint64,
)
_UNIFFI_CALLBACK_INTERFACE_FREE_SPOKE_CONNECT_TRANSPORT = ctypes.CFUNCTYPE(None,ctypes.c_uint64,
)
class _UniffiVTableCallbackInterfaceSpokeConnectTransport(ctypes.Structure):
    _fields_ = [
        ("uniffi_free", _UNIFFI_CALLBACK_INTERFACE_FREE_SPOKE_CONNECT_TRANSPORT),
        ("uniffi_clone", _UNIFFI_CALLBACK_INTERFACE_CLONE_SPOKE_CONNECT_TRANSPORT),
        ("send", _UNIFFI_CALLBACK_INTERFACE_SPOKE_CONNECT_TRANSPORT_METHOD0),
        ("recv", _UNIFFI_CALLBACK_INTERFACE_SPOKE_CONNECT_TRANSPORT_METHOD1),
        ("close", _UNIFFI_CALLBACK_INTERFACE_SPOKE_CONNECT_TRANSPORT_METHOD2),
    ]
_UniffiLib.uniffi_spoke_connect_fn_init_callback_vtable_transport.argtypes = (
    ctypes.POINTER(_UniffiVTableCallbackInterfaceSpokeConnectTransport),
)
_UniffiLib.uniffi_spoke_connect_fn_init_callback_vtable_transport.restype = None

_uniffi_check_contract_api_version(_UniffiLib)
# _uniffi_check_api_checksums(_UniffiLib)



# Public interface members begin here.


class _UniffiFfiConverterString:
    @staticmethod
    def check_lower(value):
        if not isinstance(value, str):
            raise TypeError("argument must be str, not {}".format(type(value).__name__))
        return value
